--- a/.docker/postgres.conf
+++ b/.docker/postgres.conf
@@ -798,3 +798,11 @@ statement_timeout = 0
 wal_level = 'logical'
 log_destination = 'stderr'
 log_statement = 'all'
+
+checkpoint_completion_target = 0.9
+checkpoint_flush_after       = 32
+checkpoint_timeout           = 300
+checkpoint_warning           = 30
+log_checkpoints              = off
+max_wal_size                 = 16384
+min_wal_size                 = 4096
