--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - postgres
     volumes:
       - .:/var/www/
-      - .docker/dev/php/conf.d/php.ini:/usr/local/etc/php/conf.d/php.ini
+      - .docker/php.ini:/usr/local/etc/php/php.ini
       - .docker/fpm.conf:/usr/local/etc/php-fpm.d/www.conf
 
   nginx:
@@ -38,6 +38,7 @@ services:
       - POSTGRES_USER=docker
       - POSTGRES_DB=docker
       - POSTGRES_HOST_AUTH_METHOD=scram-sha-256
+      - PGDATA=/pg
 
   pgpool:
     image: bitnami/pgpool:latest
