--- a/.docker/php.ini
+++ b/.docker/php.ini
@@ -9,5 +9,14 @@ memory_limit = 128M
 opcache.enable=1
 opcache.enable_cli=1
 opcache.jit_buffer_size=256M
-opcache.jit=on
+opcache.jit=off
 
+opcache.memory_consumption=256
+opcache.max_accelerated_files=20000
+opcache.validate_timestamps=0
+
+realpath_cache_size=4096K
+realpath_cache_ttl=600
+
+opcache.preload=/var/www/config/preload.php
+opcache.preload_user=www-data
