--- a/.docker/fpm.conf
+++ b/.docker/fpm.conf
@@ -4,8 +4,8 @@ group = www-data
 
 listen = 127.0.0.1:9000
 
-pm = dynamic
-pm.max_children = 50
+pm = static
+pm.max_children = 120
 pm.start_servers = 10
 pm.min_spare_servers = 10
 pm.max_spare_servers = 25
