--- a/.docker/nginx.conf
+++ b/.docker/nginx.conf
@@ -37,5 +37,14 @@ http {
             fastcgi_param DOCUMENT_ROOT $realpath_root;
             fastcgi_hide_header X-Powered-By;
         }
+
+        location ~ \.php(/|$) {
+            fastcgi_pass php:9000;
+            fastcgi_split_path_info ^(.+\.php)(/.*)$;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+            fastcgi_param DOCUMENT_ROOT $realpath_root;
+            fastcgi_hide_header X-Powered-By;
+        }
     }
 }
